# Sphere-aae

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  NOTICE  README.md  pyproject.toml  version.py
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md  general.md  model-request.md  speed-report.md
.github/workflows/: documentation.yaml  update-relax.yaml  windows-build.yaml
android/: README.md
android/SphereAaeChat/: README.md  bundle_weight.py  settings.gradle  sphere-aae-package-config.json
android/SphereAaeChat/app/: build.gradle
android/SphereAaeEngineExample/: README.md  bundle_weight.py  settings.gradle  sphere-aae-package-config.json
android/SphereAaeEngineExample/app/: build.gradle
android/sphereaae4j/: CMakeLists.txt  build.gradle  prepare_libs.py
android/sphereaae4j/src/main/java/ai/sphere_aae/aaellm/: JSONFFIEngine.java  OpenAIProtocol.kt  SphereAaeEngine.kt
ci/: bash.sh  build-environment.yaml  jenkinsfile.groovy
ci/task/: build_win.bat  pylint.sh  test_model_compile.sh  test_unittest.sh
cpp/: base.h
cpp/json_ffi/: conv_template.cc  conv_template.h  image_utils.cc  image_utils.h  json_ffi_engine.cc  json_ffi_engine.h  openai_api_protocol.cc  openai_api_protocol.h
cpp/metadata/: model.cc  model.h
cpp/multi_gpu/: builtin.cc  multi_gpu_loader.cc
cpp/serve/: config.cc  config.h  data.cc  data.h  draft_token_workspace_manager.cc  draft_token_workspace_manager.h  engine.cc  engine.h  engine_state.cc  engine_state.h  event_trace_recorder.cc  event_trace_recorder.h  function_table.cc  function_table.h  logit_processor.cc  logit_processor.h  metrics.cc  metrics.h  model.cc  model.h  prefix_cache.cc  prefix_cache.h  radix_tree.cc  radix_tree.h  request.cc  request.h  request_state.cc  request_state.h  threaded_engine.cc  threaded_engine.h
cpp/serve/engine_actions/: action.cc  action.h  action_commons.cc  action_commons.h  auto_spec_decode.cc  batch_decode.cc  batch_draft.cc  batch_jumpforward.cc  batch_prefill_base.cc  batch_prefill_base.h  batch_verify.cc  disagg_prepare_recv.cc  disagg_remote_send.cc  eagle_batch_draft.cc  eagle_batch_verify.cc  eagle_new_request_prefill.cc  new_request_prefill.cc
cpp/serve/sampler/: cpu_sampler.cc  gpu_sampler.cc  sampler.h
cpp/support/: debug_utils.h  dynamic_bitset.h  encoding.cc  encoding.h  json_parser.h  load_bytes_from_file.h  progress_bar.h  random.h  result.h  utils.h  vlm_utils.cc  vlm_utils.h
cpp/tokenizers/: streamer.cc  streamer.h  tokenizers.cc  tokenizers.h
docs/: README.md  conf.py  index.rst  requirements.txt
docs/api/: engine.rst  index.rst  runtime.rst  serve.rst
docs/api/_generated/: modules.rst  sphere_aae.base.rst  sphere_aae.cli.calibrate.rst  sphere_aae.cli.chat.rst  sphere_aae.cli.check_device.rst  sphere_aae.cli.compile.rst  sphere_aae.cli.convert_weight.rst  sphere_aae.cli.delivery.rst  sphere_aae.cli.disco_remote_socket_session.rst  sphere_aae.cli.gen_config.rst  sphere_aae.cli.lib_delivery.rst  sphere_aae.cli.model_metadata.rst  sphere_aae.cli.package.rst  sphere_aae.cli.router.rst  sphere_aae.cli.rst  sphere_aae.cli.serve.rst  sphere_aae.cli.worker.rst  sphere_aae.compiler_pass.attach_cuda_graph_alloc_init_func.rst  sphere_aae.compiler_pass.attach_embedding_allocator.rst  sphere_aae.compiler_pass.attach_logit_processor.rst  sphere_aae.compiler_pass.attach_sampler.rst  sphere_aae.compiler_pass.attach_softmax_with_temperature.rst  sphere_aae.compiler_pass.attach_spec_decode_aux_funcs.rst  sphere_aae.compiler_pass.attach_support_info.rst  sphere_aae.compiler_pass.blas_dispatch.rst  sphere_aae.compiler_pass.clean_up_tir_attrs.rst  sphere_aae.compiler_pass.dispatch_kv_cache_creation.rst  sphere_aae.compiler_pass.dispatch_triton_kernel.rst  sphere_aae.compiler_pass.estimate_memory_usage.rst  sphere_aae.compiler_pass.fuse_add_norm.rst  sphere_aae.compiler_pass.fuse_dequantize_matmul_ewise.rst  sphere_aae.compiler_pass.fuse_dequantize_take.rst  sphere_aae.compiler_pass.fuse_dequantize_transpose.rst  sphere_aae.compiler_pass.fuse_ft_dequantize_matmul_epilogue.rst  sphere_aae.compiler_pass.fuse_transpose_matmul.rst  sphere_aae.compiler_pass.lift_global_buffer_alloc.rst  sphere_aae.compiler_pass.low_batch_specialization.rst  sphere_aae.compiler_pass.pipeline.rst  sphere_aae.compiler_pass.pipeline_parallel_rewrite.rst  sphere_aae.compiler_pass.rst  (+126 more)
docs/community/: faq.rst  guideline.rst
docs/compilation/: compile_models.rst  configure_quantization.rst  convert_weights.rst  define_new_models.rst  package_libraries_and_weights.rst
docs/deploy/: android.rst  cli.rst  ide_integration.rst  ios.rst  python_engine.rst  rest.rst  sphere_aae_chat_config.rst  webllm.rst
docs/get_started/: introduction.rst  quick_start.rst
docs/install/: conda.rst  emcc.rst  gpu.rst  sphere_aae.rst  tvm.rst
docs/microserving/: tutorial.rst
examples/python/: sample_mlc_engine.py
examples/python/microserving/: custom_router.py
examples/rest/nodejs/: README.MD  package.json
examples/rest/python/: sample_langchain.py
ios/: .gitignore  README.md  prepare_libs.sh
ios/SphereAaeChat/: README.md  sphere-aae-package-config.json
ios/SphereAaeChat/SphereAaeChat/: MLCChatApp.swift
ios/SphereAaeChat/SphereAaeChat.xcodeproj/: project.pbxproj
ios/SphereAaeEngineExample/: README.md  sphere-aae-package-config.json
ios/SphereAaeEngineExample/SphereAaeEngineExample/: ContentView.swift  SphereAaeEngineExampleApp.swift
ios/SphereAaeEngineExample/SphereAaeEngineExample.xcodeproj/: project.pbxproj
ios/SphereAaeSwift/: Package.swift  README.md
python/: setup.py
python/mlc_llm/serve/: engine_base.py
python/sphere_aae/: __init__.py  __main__.py  base.py  libinfo.py
python/sphere_aae/bench/: __main__.py  api_endpoint.py  dataset.py  (+2 more)
scripts/: docker_verify.sh  docs_generate.sh  gh_deploy_site.sh
site/: CNAME  _config.yml  index.md
site/_includes/: hero.html
tests/: README.md
tests/cpp/: conv_template_unittest.cc
tests/python/: conftest.py
web/: Makefile  README.md  prep_emcc_deps.sh
web/emcc/: sphere_aae_wasm_runtime.cc
(+310 files in other folders)
